# controllers/quizController.js
@@ -66,14 +66,17 @@ const saveQuizResults = async (req, res) => {
 
     try {
         const {rawQuestions} = req.body;
-        const {quizTitle, questions, timeTaken} = rawQuestions;
+        let {quizTitle, questions, timeTaken, quizTopics} = rawQuestions;
+        quizTopics = quizTopics[0].split(',').map(topic => topic.trim());
+        // console.log(quizTopics)
 
         const createdQuiz = await prisma.quizzes.create({
             data: {
                 user_id: user_id,
                 quiz_title: quizTitle,
                 total_time_taken: timeTaken,
-                correct_answers_count: 0
+                correct_answers_count: 0,
+                topics: quizTopics
             }
         });
 
@@ -114,6 +117,7 @@ const saveQuizResults = async (req, res) => {
                 quiz_title: quizTitle,
                 timeTaken,
                 correctAnswersCount,
+                quizTopics,
                 questions: questions.map(question => ({
                     text: question.text,
                     correctAnswer: question.correctAnswer,
